@@ -225,17 +225,14 @@ fi
 # Calculate needed libraries
 LDSTATIC="$libdir/libfltk.a $LDLIBS"
 LDLIBS="-lfltk$SHAREDSUFFIX $LDLIBS"
-LIBS="$libdir/libfltk.a"
 
 if test x$use_forms = xyes; then
     LDLIBS="-lfltk_forms$SHAREDSUFFIX $LDLIBS"
     LDSTATIC="$libdir/libfltk_forms.a $LDSTATIC"
-    LIBS="$LIBS $libdir/libfltk_forms.a"
 fi
 if test x$use_gl = xyes; then
     LDLIBS="-lfltk_gl$SHAREDSUFFIX @GLLIB@ $LDLIBS"
     LDSTATIC="$libdir/libfltk_gl.a @GLLIB@ $LDSTATIC"
-    LIBS="$LIBS $libdir/libfltk_gl.a"
 fi
 if test x$use_images = xyes; then
     LDLIBS="-lfltk_images$SHAREDSUFFIX $IMAGELIBS $LDLIBS"
@@ -243,7 +240,7 @@ if test x$use_images = xyes; then
 fi
 
 LDLIBS="$DSOLINK $LDFLAGS $libs $LDLIBS"
-LDSTATIC="$LDFLAGS $libs $LDSTATIC"
+LDSTATIC="$LDFLAGS $LDSTATIC"
 
 # Answer to user requests
 if test -n "$echo_help"; then
@@ -314,7 +311,25 @@ if test "$echo_ldstaticflags" = "yes"; then
 fi
 
 if test "$echo_libs" = "yes"; then
-    echo $LIBS
+    echo $libdir/libfltk.a
+
+    if test x$use_forms = xyes; then
+        echo $libdir/libfltk_images.a
+    fi
+
+    if test x$use_gl = xyes; then
+        echo $libdir/libfltk_images.a
+    fi
+
+    if test x$use_images = xyes; then
+        echo $libdir/libfltk_images.a
+
+        for lib in fltk_jpeg fltk_png fltk_z; do
+            if test -f $libdir/lib$lib.a; then
+                echo $libdir/lib$lib.a
+            fi
+	done
+    fi
 fi
 
 #
